# boxy

./: README.md  embed_docs.py  embedded_docs.json  executor.py  prompts.py  pyproject.toml  query_rag.py  retrieve_context.py  tokenizer.py
rag_docs/functions/: add_active_agreement.json  add_normalized_surcharge.json  get_active_agreement.json  get_modeled_price.json  get_normalized_surcharge.json  get_shipment.json  get_table.json
rag_docs/tables/: carrier_rates_schema.json  premodel.json  surcharge_exact_matches.json
reveel_lib/: explain.py  shipment.py  utils.py
